welcome.lessons.welcome.environment.Environment.scala.error
SourceCode:3: error: identifier expected but '=' found.
droite();droite();var x: = 0; 
                         ^